--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="login">Login</string>
     <string name="logout">Logout</string>
     <string name="signup">Sign Up</string>
+    <string name="network_error">Network Error</string>
     <string name="toolbar_profile_title">Profile</string>
     <string name="action_favorite">LOGOUT</string>
     <string name="toolbar_update_profile_title">Update Profile</string>
@@ -45,4 +46,9 @@
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="what_is_your_middlename">Optional</string>
+    <string name="what_is_your_landline">Optional</string>
+    <string name="connection_timeout_message">Connection timed out</string>
+    <string name="server_error">Could not connect to the server</string>
+    <string name="no_internet_message">No Internet Connection</string>
+    <string name="close_icon">X</string>
 </resources>
