--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
     <string name="logout">Logout</string>
     <string name="signup">Sign Up</string>
     <string name="network_error">Network Error</string>
-    <string name="toolbar_profile_title">Profile</string>
     <string name="action_favorite">LOGOUT</string>
     <string name="toolbar_update_profile_title">Update Profile</string>
     <string name="profile_name_text">JERICHO ISAAC R. MAGALLANES</string>
@@ -51,4 +50,14 @@
     <string name="server_error">Could not connect to the server</string>
     <string name="no_internet_message">No Internet Connection</string>
     <string name="close_icon">X</string>
+
+    <string name="logs_icon">Time Logs</string>
+    <string name="leaves_icon">Leaves</string>
+    <string name="clients_icon">Clients</string>
+    <string name="me_icon">Me</string>
+
+    <string name="toolbar_logs_title">Time Logs</string>
+    <string name="toolbar_leaves_title">Leaves</string>
+    <string name="toolbar_clients_title">Clients</string>
+    <string name="toolbar_profile_title">Profile</string>
 </resources>
